# Unified_Dashboard

./: .gitignore  README.md  implementation-summary.md  package-lock.json  pyproject.toml
src/unified_dashboard/: main.py
test/: sample-dependency-tree.json  sample-fortify-report-with-severity.xml  sample-fortify-report.xml  sample-pom.xml  test_maven_fortify_patcher.py  usage_example.py
test/multi-module-project/: pom.xml
test/multi-module-project/module-a/: pom.xml
test/multi-module-project/module-a/test/multi-module-project/: dependency-tree.json
test/multi-module-project/module-b/: pom.xml
test/multi-module-project/module-b/test/multi-module-project/: dependency-tree.json
test/multi-module-project/test/multi-module-project/: dependency-tree.json
