[project]
name = "unified-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Flame338", email = "stevethomas499@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
unified-dashboard = "unified_dashboard:main"

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"
